--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="color-scheme" content="dark light">
   <meta name="theme-color" content="#0d1117">
 
-  <!-- Icons (optional placeholders) -->
+  <!-- Icons -->
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 64 64%22%3E%3Ccircle cx=%2232%22 cy=%2232%22 r=%2230%22 fill=%22%230d1117%22/%3E%3Ctext x=%2232%22 y=%2238%22 text-anchor=%22middle%22 font-size=%2232%22 fill=%22%23b6c2cf%22%3EF%3C/text%3E%3C/svg%3E">
 
   <!-- Styles -->
@@ -56,6 +56,8 @@
       <ul class="nav-list">
         <li><a href="#now" class="nav-link">Now</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#stack" class="nav-link">Stack</a></li>
+        <li><a href="#services" class="nav-link">Services</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
@@ -68,6 +70,7 @@
       <div class="hero-bg" aria-hidden="true"></div>
       <img class="hero-blob" src="assets/img/blob1.svg" alt="" aria-hidden="true" loading="lazy">
       <img class="hero-blob blob-2" src="assets/img/blob2.svg" alt="" aria-hidden="true" loading="lazy">
+      <img class="hero-blob blob-3" src="assets/img/blob3.svg" alt="" aria-hidden="true" loading="lazy">
 
       <div class="container hero-content">
         <h1 class="hero-title">Farid Masood Khan</h1>
@@ -75,6 +78,14 @@
         <div class="cta-group">
           <a href="#projects" class="btn primary magnetic">View Projects</a>
           <a href="/assets/cv/Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
+          <div class="hero-links" aria-label="Social links">
+            <a class="icon-link" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener" aria-label="GitHub profile">
+              <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.73.08-.73 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.82 1.32 3.51 1.01.11-.79.42-1.32.76-1.63-2.66-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.39 1.25-3.24-.13-.3-.54-1.52.12-3.17 0 0 1-.32 3.28 1.24a11.4 11.4 0 0 1 5.97 0c2.28-1.56 3.28-1.24 3.28-1.24.66 1.65.25 2.87.12 3.17.78.85 1.25 1.93 1.25 3.24 0 4.61-2.82 5.62-5.5 5.92.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.82.58A12 12 0 0 0 12 .5Z"/></svg>
+            </a>
+            <a class="icon-link" href="mailto:faridmasoodofficial@gmail.com" aria-label="Email Farid">
+              <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -110,8 +121,15 @@
     <section id="projects" class="section" aria-labelledby="projects-title">
       <div class="container">
         <h2 id="projects-title">Projects</h2>
+        <div class="repo-controls" aria-label="Repository controls">
+          <div id="repo-filters" class="chip-group" role="listbox" aria-label="Filter by language"></div>
+          <div id="repo-sort" class="sort-group" role="group" aria-label="Sort repositories">
+            <button class="btn small ghost" data-sort="updated" aria-pressed="true">Updated</button>
+            <button class="btn small ghost" data-sort="stars" aria-pressed="false">Stars</button>
+          </div>
+        </div>
         <div id="repo-status" class="sr" aria-live="polite"></div>
-        <div id="repo-grid" class="repo-grid" data-loading="true" aria-busy="true">
+        <div id="repo-grid" class="repo-grid" data-loading="true" aria-busy="true" aria-live="polite">
           <!-- Skeleton placeholders -->
           <article class="card skeleton" aria-hidden="true"></article>
           <article class="card skeleton" aria-hidden="true"></article>
@@ -137,6 +155,61 @@
             </li>
           </ul>
         </div>
+      </div>
+    </section>
+
+    <!-- Stack -->
+    <section id="stack" class="section" aria-labelledby="stack-title">
+      <div class="container glass">
+        <h2 id="stack-title">Stack</h2>
+        <dl class="stack">
+          <div class="stack-group">
+            <dt>Languages</dt>
+            <dd class="chip-group">
+              <span class="chip">Python</span>
+              <span class="chip">JavaScript</span>
+              <span class="chip">SQL</span>
+            </dd>
+          </div>
+          <div class="stack-group">
+            <dt>ML</dt>
+            <dd class="chip-group">
+              <span class="chip">scikit-learn</span>
+              <span class="chip">PyTorch</span>
+              <span class="chip">TF-IDF</span>
+              <span class="chip">Linear SVM</span>
+              <span class="chip">OpenCV</span>
+              <span class="chip">YOLO</span>
+            </dd>
+          </div>
+          <div class="stack-group">
+            <dt>Ops</dt>
+            <dd class="chip-group">
+              <span class="chip">Git</span>
+              <span class="chip">CI</span>
+              <span class="chip">Docker</span>
+              <span class="chip">Linux</span>
+            </dd>
+          </div>
+        </dl>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section id="services" class="section" aria-labelledby="services-title">
+      <div class="container">
+        <h2 id="services-title">Services</h2>
+        <ul class="service-list">
+          <li class="service card">
+            ML baselines and prototypes for IoT/SDN, text, and vision use cases.
+          </li>
+          <li class="service card">
+            Reproducible pipelines, dataset curation, and model evaluation.
+          </li>
+          <li class="service card">
+            Short demos and documentation for quick adoption.
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -167,12 +240,29 @@
           </div>
           <div class="contact-item">
             <div class="label">WeChat</div>
-            <span class="value">faridmasood1</span>
+            <span class="value" id="wechat-id">faridmasood1</span>
           </div>
           <div class="contact-actions">
             <a class="btn primary magnetic" href="mailto:faridmasoodofficial@gmail.com" aria-label="Compose email to Farid Masood Khan">Send Email</a>
           </div>
         </div>
+
+        <form id="contact-form" class="contact-form" aria-describedby="form-note">
+          <div class="field">
+            <label for="subject">Subject</label>
+            <input id="subject" name="subject" type="text" placeholder="Let's collaborate" required>
+          </div>
+          <div class="field">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="4" placeholder="Briefly describe your project or question" required></textarea>
+          </div>
+          <div class="actions">
+            <button type="submit" class="btn primary magnetic">Compose Email</button>
+            <button type="button" id="copy-wechat" class="btn ghost">Copy WeChat ID</button>
+          </div>
+          <p id="form-note" class="form-note">No backend; this opens your email client.</p>
+          <div id="contact-status" class="sr" aria-live="polite"></div>
+        </form>
       </div>
     </section>
   </main>
@@ -186,6 +276,11 @@
 
   <!-- Cursor trail canvas -->
   <canvas id="cursor-canvas" aria-hidden="true"></canvas>
+
+  <!-- Back to top -->
+  <button id="back-to-top" class="back-top" aria-label="Back to top">
+    <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 19a1 1 0 0 1-1-1V8.41L6.7 12.7a1 1 0 1 1-1.4-1.42l6-6a1 1 0 0 1 1.4 0l6 6a1 1 0 1 1-1.4 1.42L13 8.41V18a1 1 0 0 1-1 1Z"/></svg>
+  </button>
 
   <script src="assets/js/app.js" defer></script>
 </body>
