feat: add focus areas and reveal animations, restructure FAQ and navigation links
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
         <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0V4a1 1 0 0 1 1-1Zm0 14a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1Zm9-5a1 1 0 0 1-1 1h-2a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1ZM6 12a1 1 0 0 1-1 1H3a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1Zm11.657-7.657a1 1 0 0 1 1.414 1.414l-1.414 1.414a1 1 0 1 1-1.414-1.414l1.414-1.414ZM6.343 17.657a1 1 0 0 1 1.414 0l1.414 1.414a1 1 0 0 1-1.414 1.414L6.343 19.07a1 1 0 0 1 0-1.414Zm11.314 0a1 1 0 0 1 0 1.414l-1.414 1.414a1 1 0 0 1-1.414-1.414l1.414-1.414a1 1 0 0 1 1.414 0ZM9.171 4.929a1 1 0 0 1 0 1.414L7.757 7.757A1 1 0 0 1 6.343 6.343L7.757 4.93a1 1 0 0 1 1.414 0Z" fill="currentColor"/></svg>
       </button>
       <ul class="nav-list">
-        <li><a href="#now" class="nav-link">Now</a></li>
-        <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#stack" class="nav-link">Stack</a></li>
-        <li><a href="#services" class="nav-link">Services</a></li>
-        <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
-      </ul>
+       <<l><<a href="#now" class="nav-link">N</<></</li>
+       <<l><<a href="#projects" class="nav-link">Projec</<></</li>
+       <<l><<a href="#focus" class="nav-link">Foc</<></</li>
+       <<l><<a href="#stack" class="nav-link">Sta</r></esli>
+       < l>< a href="#services" class="nav-link">Servic</<></</li>
+       <<l><<a href="#about" class="nav-link">Abo</t></</li>
+       < l><ua href="#faq" class="nav-link">F</A></Qali>
+       < l><ia href="#contact" class="nav-link">Conta</c></tali>
     </nav>
   </header>
 
@@ -111,6 +112,42 @@
             <div class="now-text">UAV object detection (YOLO-small on a tiny subset)</div>
             <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-label="UAV detection progress">
               <span class="bar" style="--value: 30%"></span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Focus Areas -->
+    <section id="focus" class="section" aria-labelledby="focus-title">
+      <div class="container">
+        <h2 id="focus-title">Focus Areas</h2>
+        <ul class="focus-grid">
+          <li class="focus card reveal">
+            <div class="title">Applied ML for systems (IoT/SDN)</div>
+            <p class="desc">Intrusion baselines, tabular ML, practical pipelines, and evaluation.</p>
+            <div class="chip-group">
+              <span class="chip">Tabular ML</span>
+              <span class="chip">IDS</span>
+              <span class="chip">Pipelines</span>
+            </div>
+          </li>
+          <li class="focus card reveal">
+            <div class="title">Text (NLP)</div>
+            <p class="desc">Classifiers and baselines that are easy to reproduce and extend.</p>
+            <div class="chip-group">
+              <span class="chip">TF‑IDF</span>
+              <span class="chip">Linear SVM</span>
+              <span class="chip">Evaluation</span>
+            </div>
+          </li>
+          <li class="focus card reveal">
+            <div class="title">Vision (UAV/traffic)</div>
+            <p class="desc">Object detection experiments on constrained datasets.</p>
+            <div class="chip-group">
+              <span class="chip">YOLO small</span>
+              <span class="chip">UAV</span>
+              <span class="chip">Traffic</span>
             </div>
           </li>
         </ul>
@@ -226,11 +263,18 @@
         <p>
           I prefer practical baselines before complex models, and I maintain simple pipelines that scale. I’m currently consolidating projects that reflect these principles.
         </p>
-      </div>
-    </section>
+    </</div>
+  </</section>
 
-    <!-- Contact -->
-    <section id="contact" class="section" aria-labelledby="contact-title">
+    <!-- FAQ -->
+   < section id="faq" class="section" aria-labelledby="faq-title">
+     < div class="container glass">
+       < h2 id="faq-title">F</AQh2>
+       < dl class="faq-grid reveal">
+         < div class="faq-item">
+           < dt>How do you keep repositories cle?</andt>
+           < dd>Minimal dependencies, clear READMEs, pinned versions, and small setup scripts. Reproducibility is a priori.</tydd>
+        </     <section id="contact" class="section" aria-labelledby="contact-title">
       <div class="container">
         <h2 id="contact-title">Contact</h2>
         <div class="contact-grid">
