feat: update README, index.html, CSS for portfolio enhancements and new sections for apps and research.
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Farid Masood Khan — Software developer → DS/ML transition</title>
-  <meta name="description" content="Portfolio of Farid Masood Khan. Focused on applied ML for systems (IoT/SDN), text (NLP), and vision (UAV/traffic). Clean repos, reproducibility, tests, and short demos.">
+  <title>Farid Masood Khan — Researcher • Developer • Builder</title>
+  <meta name="description" content="Portfolio of Farid Masood Khan — Researcher, developer, and builder. Flutter apps, Python, Data Science/ML. Clean repos, reproducibility, tests, and short demos.">
   <link rel="canonical" href="https://farid-masood-khan.github.io/">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Farid Masood Khan — Portfolio">
-  <meta property="og:description" content="Applied ML across systems, text, and vision. Clean, reproducible repos and concise demos.">
+  <meta property="og:description" content="Flutter, Python, Data Science/ML — clean, reproducible repos and concise demos.">
   <meta property="og:url" content="https://farid-masood-khan.github.io/">
   <meta property="og:image" content="/assets/img/og.png">
 
@@ -39,7 +39,7 @@
     "sameAs": [
       "https://github.com/Farid-Masood-Khan"
     ],
-    "jobTitle": "Software Developer"
+    "jobTitle": "Researcher • Developer • Builder"
   }
   </script>
 </head>
@@ -51,17 +51,20 @@
       <a href="#hero" class="brand" aria-label="Go to hero">FMK</a>
       <button id="theme-toggle" class="icon-btn" aria-label="Toggle theme" aria-pressed="false" title="Toggle theme">
         <span class="visually-hidden">Toggle theme</span>
-        <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0V4a1 1 0 0 1 1-1Zm0 14a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1Zm9-5a1 1 0 0 1-1 1h-2a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1ZM6 12a1 1 0 0 1-1 1H3a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1Zm11.657-7.657a1 1 0 0 1 1.414 1.414l-1.414 1.414a1 1 0 1 1-1.414-1.414l1.414-1.414ZM6.343 17.657a1 1 0 0 1 1.414 0l1.414 1.414a1 1 0 0 1-1.414 1.414L6.343 19.07a1 1 0 0 1 0-1.414Zm11.314 0a1 1 0 0 1 0 1.414l-1.414 1.414a1 1 0 0 1-1.414-1.414l1.414-1.414a1 1 0 0 1 1.414 0ZM9.171 4.929a1 1 0 0 1 0 1.414L7.757 7.757A1 1 0 0 1 6.343 6.343L7.757 4.93a1 1 0 0 1 1.414 0Z" fill="currentColor"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0V4a1 1 0 0 1 1-1Zm0 14a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1Zm9-5a1 1 0 0 1-1 1h-2a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1ZM6 12a1 1 0 0 1-1 1H3a1 1 0 1 1 0-2h2a1 1 0 0 1 1 1Zm11.657-7.657a1 1 0 0 1 1.414 1.414l-1.414 1.414a1 1 0 1 1-1.414-1.414l1.414-1.414ZM6.343 17.657a1 1 0 0 1 0 1.414l-1.414 1.414a1 1 0 0 1-1.414-1.414l1.414-1.414a1 1 0 0 1 1.414 0ZM9.171 4.929a1 1 0 0 1 0 1.414L7.757 7.757A1 1 0 0 1 6.343 6.343L7.757 4.93a1 1 0 0 1 1.414 0Z" fill="currentColor"/></svg>
       </button>
       <ul class="nav-list">
-       <<l><<a href="#now" class="nav-link">N</<></</li>
-       <<l><<a href="#projects" class="nav-link">Projec</<></</li>
-       <<l><<a href="#focus" class="nav-link">Foc</<></</li>
-       <<l><<a href="#stack" class="nav-link">Sta</r></esli>
-       < l>< a href="#services" class="nav-link">Servic</<></</li>
-       <<l><<a href="#about" class="nav-link">Abo</t></</li>
-       < l><ua href="#faq" class="nav-link">F</A></Qali>
-       < l><ia href="#contact" class="nav-link">Conta</c></tali>
+        <li><a href="#now" class="nav-link">Now</a></li>
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#apps" class="nav-link">Apps</a></li>
+        <li><a href="#focus" class="nav-link">Focus</a></li>
+        <li><a href="#research" class="nav-link">Research</a></li>
+        <li><a href="#stack" class="nav-link">Stack</a></li>
+        <li><a href="#services" class="nav-link">Services</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#faq" class="nav-link">FAQ</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -75,7 +78,7 @@
 
       <div class="container hero-content">
         <h1 class="hero-title">Farid Masood Khan</h1>
-        <p class="hero-subtitle">Software developer → DS/ML transition</p>
+        <p class="hero-subtitle">Researcher • Developer • Builder — Flutter, Python, Data Science/ML</p>
         <div class="cta-group">
           <a href="#projects" class="btn primary magnetic">View Projects</a>
           <a href="/assets/cv/Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
@@ -150,6 +153,24 @@
               <span class="chip">Traffic</span>
             </div>
           </li>
+          <li class="focus card reveal">
+            <div class="title">Flutter apps</div>
+            <p class="desc">Mobile app prototypes, UI kits, and Firebase-backed features.</p>
+            <div class="chip-group">
+              <span class="chip">Flutter</span>
+              <span class="chip">Dart</span>
+              <span class="chip">Firebase</span>
+            </div>
+          </li>
+          <li class="focus card reveal">
+            <div class="title">Builder / Systems</div>
+            <p class="desc">APIs, pipelines, and deployment with clean CI.</p>
+            <div class="chip-group">
+              <span class="chip">FastAPI</span>
+              <span class="chip">Docker</span>
+              <span class="chip">CI</span>
+            </div>
+          </li>
         </ul>
       </div>
     </section>
@@ -195,6 +216,36 @@
       </div>
     </section>
 
+    <!-- Apps -->
+    <section id="apps" class="section" aria-labelledby="apps-title">
+      <div class="container">
+        <h2 id="apps-title">Featured Apps (Flutter)</h2>
+        <div class="apps-grid">
+          <article class="card reveal">
+            <div class="title">Flutter Portfolio App</div>
+            <div class="desc">Mobile portfolio with clean theming and modular widgets.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">View Repo</a>
+            </div>
+          </article>
+          <article class="card reveal">
+            <div class="title">Flutter + Firebase Starter</div>
+            <div class="desc">Auth, Firestore, and CI set up for rapid prototyping.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">View Repo</a>
+            </div>
+          </article>
+          <article class="card reveal">
+            <div class="title">Flutter UI Kit</div>
+            <div class="desc">Reusable widgets, animations, and layout components.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">View Repo</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
     <!-- Stack -->
     <section id="stack" class="section" aria-labelledby="stack-title">
       <div class="container glass">
@@ -206,6 +257,7 @@
               <span class="chip">Python</span>
               <span class="chip">JavaScript</span>
               <span class="chip">SQL</span>
+              <span class="chip">Dart</span>
             </dd>
           </div>
           <div class="stack-group">
@@ -217,6 +269,15 @@
               <span class="chip">Linear SVM</span>
               <span class="chip">OpenCV</span>
               <span class="chip">YOLO</span>
+            </dd>
+          </div>
+          <div class="stack-group">
+            <dt>App Dev</dt>
+            <dd class="chip-group">
+              <span class="chip">Flutter</span>
+              <span class="chip">Firebase</span>
+              <span class="chip">REST</span>
+              <span class="chip">JSON</span>
             </dd>
           </div>
           <div class="stack-group">
@@ -232,19 +293,55 @@
       </div>
     </section>
 
+    <!-- Research -->
+    <section id="research" class="section" aria-labelledby="research-title">
+      <div class="container glass">
+        <h2 id="research-title">Research</h2>
+        <ul class="research-list">
+          <li class="card reveal">
+            <div class="title">Lightweight baselines for IoT/SDN intrusion detection</div>
+            <div class="desc">Practical tabular ML with emphasis on reproducibility and clear evaluation.</div>
+            <div class="chip-group">
+              <span class="chip">Dataset</span>
+              <span class="chip">Evaluation</span>
+              <span class="chip">Reproducibility</span>
+            </div>
+          </li>
+          <li class="card reveal">
+            <div class="title">THUCNews text classification baseline</div>
+            <div class="desc">Efficient TF‑IDF + Linear SVM pipeline with simple tuning and metrics.</div>
+            <div class="chip-group">
+              <span class="chip">TF‑IDF</span>
+              <span class="chip">Linear SVM</span>
+              <span class="chip">NLP</span>
+            </div>
+          </li>
+          <li class="card reveal">
+            <div class="title">UAV object detection mini-bench</div>
+            <div class="desc">Small-scale YOLO experiments and metrics for constrained vision tasks.</div>
+            <div class="chip-group">
+              <span class="chip">YOLO</span>
+              <span class="chip">UAV</span>
+              <span class="chip">Vision</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Services -->
     <section id="services" class="section" aria-labelledby="services-title">
       <div class="container">
         <h2 id="services-title">Services</h2>
         <ul class="service-list">
           <li class="service card">
-            ML baselines and prototypes for IoT/SDN, text, and vision use cases.
+            Flutter app development: prototyping, UI/UX, and Firebase integrations.
           </li>
           <li class="service card">
-            Reproducible pipelines, dataset curation, and model evaluation.
+            Data science & ML: reproducible baselines, pipelines, and evaluation.
           </li>
           <li class="service card">
-            Short demos and documentation for quick adoption.
+            Research support: literature reviews, experiments, and documentation.
           </li>
         </ul>
       </div>
@@ -263,18 +360,32 @@
         <p>
           I prefer practical baselines before complex models, and I maintain simple pipelines that scale. I’m currently consolidating projects that reflect these principles.
         </p>
-    </</div>
-  </</section>
+    </div>
+    </section>
 
     <!-- FAQ -->
-   < section id="faq" class="section" aria-labelledby="faq-title">
-     < div class="container glass">
-       < h2 id="faq-title">F</AQh2>
-       < dl class="faq-grid reveal">
-         < div class="faq-item">
-           < dt>How do you keep repositories cle?</andt>
-           < dd>Minimal dependencies, clear READMEs, pinned versions, and small setup scripts. Reproducibility is a priori.</tydd>
-        </     <section id="contact" class="section" aria-labelledby="contact-title">
+    <section id="faq" class="section" aria-labelledby="faq-title">
+      <div class="container glass">
+        <h2 id="faq-title">FAQ</h2>
+        <dl class="faq-grid reveal">
+          <div class="faq-item">
+            <dt>How do you keep repositories clean?</dt>
+            <dd>Minimal dependencies, clear READMEs, pinned versions, and small setup scripts. Reproducibility is a priority.</dd>
+          </div>
+          <div class="faq-item">
+            <dt>Do you include tests?</dt>
+            <dd>Yes—lightweight checks for core components and pipelines so changes remain safe.</dd>
+          </div>
+          <div class="faq-item">
+            <dt>What do “short demos” mean?</dt>
+            <dd>Small scripts/notebooks that run in minutes and show practical impact quickly.</dd>
+          </div>
+        </dl>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section" aria-labelledby="contact-title">
       <div class="container">
         <h2 id="contact-title">Contact</h2>
         <div class="contact-grid">
