feat: add highlights and notes sections with responsive grids, implement CV link fallback in JavaScript.
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
       <ul class="nav-list" id="primary-nav">
         <li><a href="#now" class="nav-link">Now</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#apps" class="nav-link">Apps</a></li>
         <li><a href="#focus" class="nav-link">Focus</a></li>
-        <li><a href="#research" class="nav-link">Research</a></li>
         <li><a href="#stack" class="nav-link">Stack</a></li>
         <li><a href="#services" class="nav-link">Services</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
-        <li><a href="#faq" class="nav-link">FAQ</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
     </nav>
@@ -86,7 +83,7 @@
         <p class="hero-subtitle">Researcher • Developer • Builder — Flutter, Python, Data Science/ML</p>
         <div class="cta-group">
           <a href="#projects" class="btn primary magnetic">View Projects</a>
-          <a href="/assets/cv/Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
+          <a id="cv-link" href="/assets/cv/Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
           <div class="hero-links" aria-label="Social links">
             <a class="icon-link" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener" aria-label="GitHub profile">
               <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.73.08-.73 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.82 1.32 3.51 1.01.11-.79.42-1.32.76-1.63-2.66-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.39 1.25-3.24-.13-.3-.54-1.52.12-3.17 0 0 1-.32 3.28 1.24a11.4 11.4 0 0 1 5.97 0c2.28-1.56 3.28-1.24 3.28-1.24.66 1.65.25 2.87.12 3.17.78.85 1.25 1.93 1.25 3.24 0 4.61-2.82 5.62-5.5 5.92.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.82.58A12 12 0 0 0 12 .5Z"/></svg>
@@ -198,6 +195,36 @@
             </div>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <!-- Highlights -->
+    <section id="highlights" class="section" aria-labelledby="highlights-title">
+      <div class="container">
+        <h2 id="highlights-title">Highlights</h2>
+        <div class="highlights-grid">
+          <article class="card reveal">
+            <div class="title">Portfolio design system</div>
+            <div class="desc">Consistent components, glass surfaces, gradients, and accessibility.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">View Repo</a>
+            </div>
+          </article>
+          <article class="card reveal">
+            <div class="title">Flutter + Firebase starter</div>
+            <div class="desc">Auth, Firestore, CI, and modular widgets for rapid prototyping.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">View Repo</a>
+            </div>
+          </article>
+          <article class="card reveal">
+            <div class="title">IoT/SDN baseline toolkit</div>
+            <div class="desc">Lightweight tabular ML baselines with reproducible pipelines.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">View Repo</a>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
 
@@ -407,6 +434,36 @@
             <dd>Small scripts/notebooks that run in minutes and show practical impact quickly.</dd>
           </div>
         </dl>
+      </div>
+    </section>
+
+    <!-- Notes -->
+    <section id="notes" class="section" aria-labelledby="notes-title">
+      <div class="container glass">
+        <h2 id="notes-title">Notes</h2>
+        <div class="notes-grid">
+          <article class="card reveal">
+            <div class="title">Setup: Flutter + Firebase</div>
+            <div class="desc">Base project structure, auth wiring, and CI suggestions.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">Read</a>
+            </div>
+          </article>
+          <article class="card reveal">
+            <div class="title">DS/ML Baselines</div>
+            <div class="desc">Choosing simple baselines and making pipelines reproducible.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">Read</a>
+            </div>
+          </article>
+          <article class="card reveal">
+            <div class="title">Portfolio UX decisions</div>
+            <div class="desc">Accessibility, performance, and responsive layout trade-offs.</div>
+            <div class="actions">
+              <a class="btn ghost" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener">Read</a>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
 
