chore: remove notes loader and related markup from app.js and index.html
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p class="hero-subtitle">Researcher • Developer • Engineer — Flutter, Python, Data Science/ML</p>
         <div class="cta-group">
           <a href="#projects" class="btn primary magnetic">View Projects</a>
-          <a id="cv-link" href="assets/cv/Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
+          <a id="cv-link" href="Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
           <div class="hero-links" aria-label="Social links">
             <a class="icon-link" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener" aria-label="GitHub profile">
               <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.73.08-.73 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.82 1.32 3.51 1.01.11-.79.42-1.32.76-1.63-2.66-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.39 1.25-3.24-.13-.3-.54-1.52.12-3.17 0 0 1-.32 3.28 1.24a11.4 11.4 0 0 1 5.97 0c2.28-1.56 3.28-1.24 3.28-1.24.66 1.65.25 2.87.12 3.17.78.85 1.25 1.93 1.25 3.24 0 4.61-2.82 5.62-5.5 5.92.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.82.58A12 12 0 0 0 12 .5Z"/></svg>
@@ -442,13 +442,7 @@
       </div>
     </section>
 
-    <!-- Notes -->
-    <section id="notes" class="section" aria-labelledby="notes-title">
-      <div class="container glass">
-        <h2 id="notes-title">Notes</h2>
-        <div id="notes-grid" class="notes-grid"></div>
-      </div>
-    </section>
+    
 
     <!-- Contact -->
     <section id="contact" class="section" aria-labelledby="contact-title">
@@ -468,7 +462,7 @@
           </div>
         </div>
 
-        <form id="contact-form" class="contact-form" aria-describedby="form-note">
+        <form id="contact-form" class="contact-form">
           <div class="field">
             <label for="subject">Subject</label>
             <input id="subject" name="subject" type="text" placeholder="Let's collaborate" required>
@@ -482,7 +476,6 @@
             <button type="button" id="copy-wechat" class="btn ghost">Copy WeChat ID</button>
             <button type="button" id="show-wechat-qr" class="btn ghost">Show WeChat QR</button>
           </div>
-          <p id="form-note" class="form-note">No backend; this opens your email client.</p>
           <div id="contact-status" class="sr" aria-live="polite"></div>
         </form>
 
