fix: update README and clean up HTML/CSS by removing unused features and improving clarity
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Farid Masood Khan — Portfolio">
   <meta property="og:description" content="Flutter, Python, Data Science/ML — clean, reproducible repos and concise demos by a researcher, developer, and engineer.">
   <meta property="og:url" content="https://farid-masood-khan.github.io/">
-  <meta property="og:image" content="/assets/img/og.png">
+  <meta property="og:image" content="assets/img/og.png">
 
   <!-- Preconnect for performance -->
   <link rel="preconnect" href="https://api.github.com" crossorigin>
@@ -74,16 +74,14 @@
     <!-- Hero -->
     <section id="hero" class="section hero" aria-label="Hero">
       <div class="hero-bg" aria-hidden="true"></div>
-      <img class="hero-blob" src="assets/img/blob1.svg" alt="" aria-hidden="true" loading="lazy">
-      <img class="hero-blob blob-2" src="assets/img/blob2.svg" alt="" aria-hidden="true" loading="lazy">
-      <img class="hero-blob blob-3" src="assets/img/blob3.svg" alt="" aria-hidden="true" loading="lazy">
+      
 
       <div class="container hero-content">
         <h1 class="hero-title">Farid Masood Khan</h1>
         <p class="hero-subtitle">Researcher • Developer • Engineer — Flutter, Python, Data Science/ML</p>
         <div class="cta-group">
-          <a href="#projects" class="btn primary magnetic">View Projects</a>
-          <a id="cv-link" href="Farid_Masood_CV.pdf" class="btn ghost magnetic" download>Download CV</a>
+          <a href="#projects" class="btn primary">View Projects</a>
+          <a id="cv-link" href="Farid_Masood_CV.pdf" class="btn ghost" download>Download CV</a>
           <div class="hero-links" aria-label="Social links">
             <a class="icon-link" href="https://github.com/Farid-Masood-Khan" target="_blank" rel="noopener" aria-label="GitHub profile">
               <svg width="22" height="22" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.02c-3.34.73-4.04-1.61-4.04-1.61-.55-1.38-1.35-1.75-1.35-1.75-1.1-.75.08-.73.08-.73 1.21.09 1.85 1.25 1.85 1.25 1.08 1.85 2.82 1.32 3.51 1.01.11-.79.42-1.32.76-1.63-2.66-.3-5.47-1.33-5.47-5.93 0-1.31.47-2.39 1.25-3.24-.13-.3-.54-1.52.12-3.17 0 0 1-.32 3.28 1.24a11.4 11.4 0 0 1 5.97 0c2.28-1.56 3.28-1.24 3.28-1.24.66 1.65.25 2.87.12 3.17.78.85 1.25 1.93 1.25 3.24 0 4.61-2.82 5.62-5.5 5.92.43.37.82 1.1.82 2.22v3.29c0 .32.21.7.82.58A12 12 0 0 0 12 .5Z"/></svg>
@@ -403,7 +401,7 @@
           My approach: start with strong baselines, measure honestly, and ship well-documented code. When things get more complex, I keep pipelines minimal and results repeatable.
         </p>
         <div class="actions" style="margin-top: 10px;">
-          <a class="btn primary magnetic" href="mailto:faridmasoodofficial@gmail.com">Email</a>
+          <a class="btn primary" href="mailto:faridmasoodofficial@gmail.com">Email</a>
           <a class="btn ghost" href="https://www.linkedin.com/in/farid-masood-khan/" target="_blank" rel="noopener">LinkedIn</a>
         </div>
       </div>
@@ -458,7 +456,7 @@
             <span class="value" id="wechat-id">faridmasood1</span>
           </div>
           <div class="contact-actions">
-            <a class="btn primary magnetic" href="mailto:faridmasoodofficial@gmail.com" aria-label="Compose email to Farid Masood Khan">Send Email</a>
+            <a class="btn primary" href="mailto:faridmasoodofficial@gmail.com" aria-label="Compose email to Farid Masood Khan">Send Email</a>
           </div>
         </div>
 
@@ -472,7 +470,7 @@
             <textarea id="message" name="message" rows="4" placeholder="Briefly describe your project or question" required></textarea>
           </div>
           <div class="actions">
-            <button type="submit" class="btn primary magnetic">Compose Email</button>
+            <button type="submit" class="btn primary">Compose Email</button>
             <button type="button" id="copy-wechat" class="btn ghost">Copy WeChat ID</button>
             <button type="button" id="show-wechat-qr" class="btn ghost">Show WeChat QR</button>
           </div>
@@ -496,8 +494,7 @@
     </div>
   </footer>
 
-  <!-- Cursor trail canvas -->
-  <canvas id="cursor-canvas" aria-hidden="true"></canvas>
+  
 
   <!-- Back to top -->
   <button id="back-to-top" class="back-top" aria-label="Back to top">
